# evalchemy

./: Llama-4-Maverick-17B-128E-Instruct_aime24_2025-05-12_08-48-54.txt  Llama-4-Maverick-17B-128E-Instruct_gpqadiamond_2025-05-12_09-10-47.txt  Llama-4-Maverick-17B-128E-Instruct_ifeval_2025-05-12_09-41-48.txt  Llama-4-Maverick-17B-128E-Instruct_livecodebench_2025-05-12_10-23-22.txt  Llama-4-Maverick-17B-128E-Instruct_math500_2025-05-12_10-00-20.txt  pyproject.toml  run_evalchemy.sh
eval/chat_benchmarks/AIME24/: eval_instruct.py
eval/chat_benchmarks/AIME25/: eval_instruct.py
eval/chat_benchmarks/AMC23/: eval_instruct.py
eval/chat_benchmarks/GPQADiamond/: eval_instruct.py
eval/chat_benchmarks/IFEval/: eval_instruct.py
eval/chat_benchmarks/LiveCodeBench/: eval_instruct.py  livecodebench_utils.py
eval/chat_benchmarks/MATH500/: eval_instruct.py
eval/chat_benchmarks/alpaca_eval/src/alpaca_eval/decoders/: openai.py  sambanova_api.py
